# jirehs-flashcards

./: .gitignore  Cargo.toml  README.md  nx.json  package.json  pnpm-lock.yaml  progress.md  spec.md  tsconfig.base.json
apps/backend/: .env.example  .env.test.example  Cargo.toml
apps/backend/migrations/: 001_initial_schema.sql
apps/backend/src/: error.rs  lib.rs  main.rs
apps/backend/src/db/: mod.rs
apps/backend/src/models/: mod.rs
apps/backend/src/routes/: auth.rs  decks.rs  device.rs  mod.rs  settings.rs  study.rs  sync.rs
apps/backend/src/services/: mod.rs  storage.rs  sync.rs
apps/backend/src/services/algorithm/: mod.rs
apps/backend/tests/: api_decks.rs  api_device.rs  api_settings.rs  api_study.rs  api_sync.rs
apps/backend/tests/common/: fixtures.rs  mod.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: deck.rs  mod.rs  settings.rs  stats.rs  study.rs  sync.rs  watcher.rs
apps/desktop/src-tauri/src/db/: date_utils.rs  error.rs  mod.rs  repository.rs  schema.rs
apps/desktop/src-tauri/src/parser/: mod.rs
apps/desktop/src-tauri/src/sync/: mod.rs
apps/desktop/src-tauri/src/watcher/: mod.rs
apps/frontend/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: App.tsx  styles.css
apps/frontend/src/components/Card/: Card.test.tsx  Card.tsx
apps/frontend/src/components/Layout/: Layout.tsx
apps/frontend/src/hooks/: useFileWatcher.test.tsx  useFileWatcher.ts  useSettings.test.tsx  useSettings.ts  useStats.test.tsx  useStats.ts  useStudySession.test.tsx  useStudySession.ts  useSync.ts
apps/frontend/src/lib/: tauri.ts
apps/frontend/src/pages/: DeckList.test.tsx  DeckList.tsx  Settings.tsx  Stats.tsx  Study.tsx
apps/frontend/src/stores/: studyStore.test.ts  studyStore.ts
apps/frontend/src/test/: factories.ts  setup.ts  utils.tsx
docs/: DEVELOPMENT.md
libs/flashcard-core/: Cargo.toml
libs/flashcard-core/src/: error.rs  lib.rs  matching.rs  parser.rs  types.rs
libs/flashcard-core/src/algorithm/: fsrs.rs  mod.rs  sm2.rs
libs/shared-types/: package.json  tsconfig.json
libs/shared-types/src/: index.ts
scripts/: run-tests.sh  setup-dev.sh
(+16 files in other folders)
